--- a/.eslintrc
+++ b/.eslintrc
@@ -6,12 +6,32 @@
       "prettier",
       "prettier/react"
     ],
+    "env": { 
+      "jest": true
+    },
+    "globals": {
+      "document": true
+    },
     "rules": {
+      "import/prefer-default-export": "off",
+      "react/jsx-props-no-spreading": "off",
+      "react/no-unescaped-entities": 0,
+      "react/prop-types": 0,
+      "no-unused-vars": 0,
+      "react/jsx-boolean-value": 0,
       "react/jsx-filename-extension": [
         1,
         { 
           "extensions": [".js"] 
         }
       ]
+    },
+    "settings": {
+      "import/resolver": {
+        "node": {
+          "paths": ["src"],
+          "extensions": [".js", ".jsx", ".ts", ".tsx"]
+        }
+      }
     }
   } 
